--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,28 +1,38 @@
-name: CI
+name: Java CI
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
     - name: Use Node.js 14.x
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v2
       with:
-        node-version: 14.x
+        node-version: '14'
+
     - name: Install dependencies
       run: npm install
+
     - name: Build
       run: npm run build
+
     - name: Test
       run: npm test
-      
+
     - name: Upload test results
+      if: success()
       uses: actions/upload-artifact@v2
       with:
         name: lyztest
         path: test/
+
 
