--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -1,38 +1,21 @@
-name: Java CI
+name: CI
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Use Node.js 14.x
+    - uses: actions/checkout@v2
+    - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '14'
-
     - name: Install dependencies
       run: npm install
-
-    - name: Build
-      run: npm run build
-      
-    - name: Test
+    - name: Run tests
       run: npm test
 
-    - name: Upload test results
-      if: success()
-      uses: actions/upload-artifact@v2
-      with:
-        name: lyztest
-        path: test/
 
 
